--- a/singolo1.css
+++ b/singolo1.css
@@ -157,3 +157,50 @@ li.dot:before {
   bottom: 2px;
 }
 
+/*Slider block*/
+div.slider {
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+  height: 595px;
+}
+
+a img {
+  opacity: 0.2;
+}
+
+a img:hover {
+  opacity: 0.5;
+}
+
+a img.img-left {
+  position: absolute;
+  top: 57%;
+  left: 16%;
+  right: 0;
+  bottom: 0;
+}
+
+a img.img-right {
+  transform: rotate(180deg);
+  position: absolute;
+  top: 57%;
+  left: 84%;
+  right: 0;
+  bottom: 0;
+}
+
+img.iPhone-vertical {
+  position: absolute;
+  top: 22%;
+  left: 21%;
+  right: 0;
+  bottom: 0;
+}
+
+img.iPhone-horizontal {
+  position: absolute;
+  top: 41%;
+  left: 44%;
+  right: 0;
+  bottom: 0;
+}
