--- a/singolo2.css
+++ b/singolo2.css
@@ -83,4 +83,136 @@
 body {
   margin: auto;
   width: 1020px;
+  
+  font-family: "Lato";
+  text-align: left;
+  color: #666d89;
+}
+
+.portfolio {
+  padding: 70px 40px;
+  background: #2d303a;
+  height: 725px;
+  border-bottom: 6px solid #323746;
+}
+
+.portfolio h2 {
+  font-size: 30px;
+  line-height: 18px;
+  font-weight: 900;
+}
+
+.portfolio p {
+  padding-top: 27px;
+  padding-bottom: 11px;
+  font-size: 18px;
+  line-height: 30px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 300;
+  text-align: left;
+}
+
+a.catalog {
+  font-size: 12px;
+  line-height: 22px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 400;
+  text-align: left;
+  text-decoration: none;
+  
+  margin-right: 10px;
+  padding: 3px 5px;
+  border-radius: 5px;
+  border: 1px solid #666d89;
+}
+
+div.images {
+  padding-top: 15px;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.box01, .box02, .box03, .box04, .box05, .box06, .box07, .box08, .box09, .box10, .box11, .box12 {
+  width: 220px;
+  height: 187px;
+}
+
+.box01 {
+  background-image: url(assets/img/Project01.png);
+  background-position: -10px -10px;
+}
+
+.box02 {
+  background-image: url(assets/img/Project02.png);
+  background-position: -82px -43px;
+}
+
+.box03 {
+  background-image: url(assets/img/Project03.png);
+  background-position: -10px 0;
+}
+
+.box04 {
+  background-image: url(assets/img/Project04.png);
+  background-position: -20px 0;
+}
+
+.box05 {
+  background-image: url(assets/img/Project05.png);
+  background-position: -10px -10px;
+}
+
+.box06 {
+  background-image: url(assets/img/Project06.png);
+  background-position: -10px -10px;
+}
+
+.box07 {
+  background-image: url(assets/img/Project07.png);
+  background-position: -50px -50px;
+}
+
+.box08 {
+  background-image: url(assets/img/Project08.png);
+  background-position: -20px -50px;
+}
+
+.box09 {
+  background-image: url(assets/img/Project09.png);
+  background-position: -10px 0;
+}
+
+.box10 {
+  background-image: url(assets/img/Project10.png);
+  background-position: -130px -110px;
+}
+
+.box11 {
+  background-image: url(assets/img/Project11.png);
+  background-position: -150px -170px;
+}
+
+.box12 {
+  background-image: url(assets/img/Project12.png);
+  background-position: -50px -50px;
+}
+
+.box13 {
+  background-image: url(assets/img/Project10.png);
+  background-position: -130px -110px;
+}
+
+.box14 {
+  background-image: url(assets/img/Project11.png);
+  background-position: -150px -170px;
+}
+
+.box15 {
+  background-image: url(assets/img/Project12.png);
+  background-position: -50px -50px;
 }
