--- a/singolo2.css
+++ b/singolo2.css
@@ -128,6 +128,11 @@ a.catalog {
   border: 1px solid #666d89;
 }
 
+a.catalog:hover {
+  color: #dedede;
+  border: 1px solid #dedede;
+}
+
 div.images {
   padding-top: 15px;
   overflow: hidden;
