--- a/singolo2.css
+++ b/singolo2.css
@@ -221,3 +221,71 @@ div.images {
   background-image: url(assets/img/Project12.png);
   background-position: -50px -50px;
 }
+
+.about {
+  padding: 67px 40px;
+  height: 593px;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+
+.about h2 {
+  font-size: 30px;
+  line-height: 18px;
+  font-weight: 900;
+}
+
+.about p {
+  padding-top: 28px;
+  padding-bottom: 48px;
+  width: 940px;
+  height: 57px;
+  font-size: 18px;
+  line-height: 30px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 300;
+  text-align: left;
+}
+
+.profile {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 15px;
+}
+
+.profile h3 {
+  padding-top: 15px;
+  font-size: 18px;
+  line-height: 18px;
+  color: #666d89;
+  font-family: "Lato";
+  font-weight: 900;
+  text-align: left;
+}
+
+.profile p {
+  padding-top: 10px;
+  padding-bottom: 70px;
+  width: 300px;
+  height: 0;
+  font-size: 12px;
+  line-height: 22px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 400;
+  text-align: left;
+}
+
+.circle {
+  padding: 8px 13px;
+  margin: 0;
+  background-image: url("assets/img/Ellipse.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.img:hover {
+  transform: scale(1.5, 1.5);
+}
